--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: docker/django/Dockerfile
     container_name: django_app
     command: >
-      sh -c "python /app/manage.py migrate && python /app/manage.py makemigrations && python /app/manage.py collectstatic --noinput && gunicorn core.wsgi:application --bind 0.0.0.0:8000"
+      sh -c "python /app/manage.py migrate && python /app/manage.py collectstatic --noinput && gunicorn core.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - ./app:/app
       - static_volume:/app/staticfiles
