--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -16,6 +16,8 @@ http {
         listen 80;
         server_name localhost;
 
+        client_max_body_size 25M;
+
         location /static/ {
             alias /static/;
             expires 30d;
