--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name https://f471-145-239-133-204.ngrok-free.app;
 
         client_max_body_size 25M;
 
@@ -31,6 +31,14 @@ http {
         }
 
         location / {
+            proxy_pass http://django:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /telegram/webhook/ {
             proxy_pass http://django:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
