--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -14,7 +14,7 @@ http {
 
     server {
         listen 80;
-        server_name https://f471-145-239-133-204.ngrok-free.app;
+        server_name localhost;
 
         client_max_body_size 25M;
 
